# Qtool

./: .gitignore  README.md  pyproject.toml  test.py
qtool/: __init__.py  ufunc.py
qtool/math/: __init__.py  base.py  de.py  numerical.py  numerical.pyi  polynomial.py  test.py  vector.py
qtool/nctools/: __init__.py  tools.py  tools.pyi
qtool/numerical/: basic.py
qtool/thermo/: skewT.py  thermo.py
